--- a/src/content/index.html
+++ b/src/content/index.html
@@ -20,12 +20,12 @@
     <form class="form">
       <p class="form__title">
         <label class="form__title--label" for="title">Title:<br>
-          <input class="form__title--input" placeholder="Enter message title..." name="title" id="title" type="text">
+          <input required class="form__title--input" placeholder="Enter message title..." name="title" id="title" type="text">
         </label>
       </p>
       <p class="form__content">
         <label class="form__content--label" for="content">Content:<br>
-          <textarea class="form__content--input" placeholder="Enter message content..." name="content" id="content"></textarea>
+          <textarea required class="form__content--input" placeholder="Enter message content..." name="content" id="content"></textarea>
         </label>
       </p>
       <div class="form__buttons">
