--- a/src/content/index.html
+++ b/src/content/index.html
@@ -17,22 +17,24 @@
 <body>
   <main class="simple-editor">
     <h1 class="simple-editor__header">Simple editor</h1>
-    <form class="form">
+    <div class="form">
       <p class="form__title">
         <label class="form__title--label" for="title">Title:<br>
-          <input required class="form__title--input" placeholder="Enter message title..." name="title" id="title" type="text">
+          <input class="form__title--input form__title--input-js" placeholder="Enter message title..." name="title"
+            id="title" type="text">
         </label>
       </p>
       <p class="form__content">
         <label class="form__content--label" for="content">Content:<br>
-          <textarea required class="form__content--input" placeholder="Enter message content..." name="content" id="content"></textarea>
+          <textarea class="form__content--input form__content--input-js" placeholder="Enter message content..."
+            name="content" id="content"></textarea>
         </label>
       </p>
       <div class="form__buttons">
-        <button class="form__buttons--save" type="submit">Save</button>
-        <button class="form__buttons--load">Load</button>
+        <button class="form__buttons--save form__buttons--save-js">Save</button>
+        <button class="form__buttons--load form__buttons--load-js">Load</button>
       </div>
-    </form>
+    </div>
   </main>
 
   <script src="js/main.js"></script>
