--- a/src/content/index.html
+++ b/src/content/index.html
@@ -7,8 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>SIMPLE EDITOR</title>
   <meta name="description" content="Description" />
-
-  <link rel="manifest" href="manifest.json" />
+  
   <meta name="apple-mobile-web-app-capable" content="yes" />
 
   <link rel="stylesheet" href="css/main.css" />
@@ -19,27 +18,27 @@
     <h1 class="main-container__header">Simple editor</h1>
     <div class="simple-editor">
       <form class="form">
-        <h2 class="form__header">Test test</h2>
+        <h2 class="form__header">Your message</h2>
         <p class="form__wrapper">
-          <label class="form__title--label" for="title">Title:<br>
-            <input class="form__title--input form__title--input-js" placeholder="Enter message title..." name="title"
+          <label class="form__title--label" for="title">Title<br>
+            <input class="form__title--input form__title--input-js" placeholder="Message title" name="title"
               id="title" type="text">
           </label>
         </p>
         <p class="form__wrapper">
-          <label class="form__content--label" for="content">Content:<br>
-            <textarea class="form__content--input form__content--input-js" placeholder="Enter message content..."
+          <label class="form__content--label" for="content">Content<br>
+            <textarea class="form__content--input form__content--input-js" placeholder="Message content"
               name="content" id="content"></textarea>
           </label>
         </p>
         <div class="form__buttons">
-          <button class="form__buttons--save form__buttons--save-js">Save</button>
-          <button class="form__buttons--load form__buttons--load-js">Load</button>
+          <button class="form__button form__button--save form__button--save-js">Save</button>
+          <button class="form__button form__button--load form__button--load-js">Load</button>
         </div>
       </form>
       <section class="hello">
         <h2 class="hello__title">Hello, Friend!</h2>
-        <span class="hello__message">Enter your note and save that, enyoj this smart application</span>
+        <span class="hello__message">Type in your message and write it down, enjoy a simple and free editor ;)</span>
       </section>
     </div>
   </main>
